Work on hero sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 
 .left-section {
     width: 38%;
-    min-width: 250px;
+    min-width: 270px;
     max-width: 400px;
     display: flex;
     flex-direction: column;
@@ -29,15 +29,15 @@ body {
     background-position: center;
 }
 
-.image-source,
-.image-source a {
+.source,
+.source a {
     color: black;
-    font-size: 12px;
-    background-color: #ffffff62;
+    font-size: 11px;
 }
 
-.image-source {
+.source {
     margin: 10px;
+    background-color: #ffffff70;
 }
 
 .signup-form {
@@ -64,4 +64,20 @@ button {
 /* .content {
     flex: 1;
 } */
+
+img {
+    width: 80px;
+    overflow: hidden
+}
+
+.logo {
+    margin-top: min(150px,13vh);
+    font-size: 80px;
+    display: flex;
+    overflow: hidden;
+    background-color: #ffffff79;
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+}
 
