--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
     height: 100%;
     min-height: 500px;
     font-family: "Roboto", sans-serif;
+    overflow-y: hidden;
 }
 
 .header {
@@ -35,7 +36,7 @@ body {
 }
 
 .left-section {
-    width: 38%;
+    width: 40%;
     min-width: 270px;
     max-width: 400px;
     display: flex;
@@ -45,18 +46,19 @@ body {
     background-image: url(.././img/josh-hild-K4WXehq5Alc-unsplash.jpg);
     background-size: auto 100%;
     background-position: center;
-    
 }
 
 .source,
 .source a {
     color: black;
-    font-size: 11px;
+    font-size: 10px;
 }
 
 .source {
     margin: 10px;
     background-color: #ffffff70;
+    position: sticky;
+    bottom: 10px;
 }
 
 .signup-form {
@@ -68,8 +70,8 @@ body {
 }
 
 form h1 {
- padding: 0;
- margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .form-flex-row {
@@ -89,20 +91,25 @@ button {
 }
 
 img {
-    width: 80px;
-    overflow: hidden;
-    flex: none;
+    width: 60px;
+    height: 60px;
 }
 
 .logo {
-    margin-top: min(150px,13vh);
-    font-size: 80px;
+    margin-top: min(150px, 13vh);
+    font-size: 60px;
     display: flex;
-    overflow: hidden;
-    background-color: #ffffff79;
+    background-color: #ffffff61;
     width: 100%;
     justify-content: center;
-    padding: 10px;
+    padding: 10px 0;
+    align-items: center;
+}
+
+.content {
+    overflow-y: auto;
+    height: 100vh;
+    min-width: 200px;
 }
 
 .content-bottom {
