--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-image: url(josh-hild-K4WXehq5Alc-unsplash.jpg);
+    background-image: url(./img/josh-hild-K4WXehq5Alc-unsplash.jpg);
     background-size: auto 100%;
     background-position: center;
 }
