--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,9 @@ img {
     justify-content: center;
     padding: 10px 0;
     align-items: center;
+}
+
+.brand-name {
     font-family: 'Pacifico', cursive;
 }
 
