--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ input {
     border-radius: 3px;
     border-style: solid;
     border-width: 1px;
+    width: 200px;
 }
 
 input:focus {
@@ -153,7 +154,7 @@ img {
 .content {
     overflow-y: auto;
     height: 100vh;
-    min-width: 200px;
+    min-width: 240px;
 }
 
 .content-bottom {
